--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="canvas-container">
             <canvas id="canvas"></canvas>
         </div>
-        <script src="main.js"></script>      
+        <script src="game.js"></script>      
         
     </body>
         
