--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     
     <head>           
         <link rel="stylesheet" href="main.css" type="text/css">
+        <script src="jquery-1.9.1.min.js"></script>
     </head>  
     
     <body>
