--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
         
-        <div id="canvas-container">
+        <div unselectable="on" id="canvas-container">
             <canvas id="canvas"></canvas>
         </div>
         <script src="game.js"></script>      
