Fix selecting bug

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="jquery-1.9.1.min.js"></script>
     </head>  
     
-    <body>
+    <body unselectable="on" >
         
         <div unselectable="on" id="canvas-container">
             <canvas id="canvas"></canvas>
