--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <script src="jquery-1.9.1.min.js"></script>
     </head>  
     
-    <body unselectable="on">
+    <body>
         
-        <div unselectable="on" id="canvas-container">
+        <div id="canvas-container">
             <canvas id="canvas"></canvas>
         </div>
         <script src="game.js"></script>      
