--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <canvas id="canvas"></canvas>
         </div>
         <script src="game.js"></script>      
-        
+        <!--comment added by Alic-->
     </body>
         
 </html>
