Changed name and removed log

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </head>  
     
     <body  onclick="javascript:start();">
-        <h1 id="mainH">GG JAVASCRIPT</h1>
+        <h1 id="mainH">Mouse Moving Thing</h1>
         <h2 id="subtitle" >Hit the most dominant color, you have 30 seconds!</h2>
         <h3 id="subtitle2">Click anywhere to start</h3>    
                            
